<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <TextView
        android:id="@+id/viewUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/usuario"
        android:textColor="@color/primary_text"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:onClick="mostrarContraseña"
        android:text="@string/contraseña"
        android:textColor="@color/primary_text"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/viewUsuario"
        app:layout_constraintTop_toBottomOf="@+id/viewUsuario" />

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/nombre"
        android:textColor="@color/primary_text"
        android:textSize="18dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/viewEmail"
        app:layout_constraintTop_toBottomOf="@+id/viewEmail" />

    <TextView
        android:id="@+id/viewApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/apellidos"
        android:textColor="@color/primary_text"
        android:textSize="18dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/viewNombre"
        app:layout_constraintTop_toBottomOf="@+id/viewNombre" />

    <TextView
        android:id="@+id/viewTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/telefono"
        android:textColor="@color/primary_text"
        android:textSize="18dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/viewApellidos"
        app:layout_constraintTop_toBottomOf="@+id/viewApellidos" />

    <TextView
        android:id="@+id/viewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/mail"
        android:textColor="@color/primary_text"
        android:textCursorDrawable="@null"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/viewContraseña"
        app:layout_constraintTop_toBottomOf="@+id/viewContraseña" />

    <Button
        android:id="@+id/botonBorrarCuenta"
        android:layout_width="143dp"
        android:layout_height="65dp"
        android:layout_marginTop="152dp"
        android:backgroundTint="@color/icons"
        android:onClick="borrarCuenta"
        android:text="@string/borrar"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTelefono" />

</androidx.constraintlayout.widget.ConstraintLayout>