<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/primary">

    <Button
        android:id="@+id/hacerReserva"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/icons"
        android:onClick="hacerReserva"
        android:text="@string/hacerReserva"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/misReservas"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/icons"
        android:onClick="misReservas"
        android:text="@string/misReservas"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/hacerReserva"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/hacerReserva"
        app:layout_constraintTop_toBottomOf="@+id/hacerReserva" />

    <Button
        android:id="@+id/salir"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/icons"
        android:onClick="salir"
        android:text="@string/salir"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/icons"
        android:onClick="anularReserva"
        android:text="@string/anular"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/misReservas"
        app:layout_constraintTop_toBottomOf="@+id/misReservas" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/icons"
        android:onClick="ubicacion"
        android:text="@string/ubicacion"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />
</androidx.constraintlayout.widget.ConstraintLayout>