<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:gravity="center"
        android:text="*"
        android:textSize="18dp"
        android:textColor="@color/primary_text"
        app:layout_constraintStart_toEndOf="@+id/viewContraseña"
        app:layout_constraintTop_toTopOf="@+id/viewContraseña" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:gravity="center"
        android:text="*"
        android:textColor="@color/primary_text"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/viewEmail"
        app:layout_constraintTop_toTopOf="@+id/viewEmail" />

    <TextView
        android:id="@+id/viewUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:text="@string/usuario"
        android:textSize="18dp"
        android:textColor="@color/primary_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/contraseña"
        android:textSize="18dp"
        android:textColor="@color/primary_text"
        app:layout_constraintStart_toStartOf="@+id/entradaUsuario"
        app:layout_constraintTop_toBottomOf="@+id/entradaUsuario" />

    <EditText
        android:id="@+id/entradaUsuario"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/primary_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textColor="@color/primary_text"
        android:textCursorDrawable="@null"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/viewUsuario"
        app:layout_constraintTop_toBottomOf="@+id/viewUsuario" />

    <EditText
        android:id="@+id/entradaPassw"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/primary_text"
        android:ems="10"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textColor="@color/primary_text"
        android:textCursorDrawable="@null"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/viewContraseña"
        app:layout_constraintTop_toBottomOf="@+id/viewContraseña" />

    <Button
        android:id="@+id/botonBorrarCuenta"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/icons"
        android:onClick="registrarUsuario"
        android:text="@string/confirmar"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@+id/entradaTelefono"
        app:layout_constraintTop_toBottomOf="@+id/entradaTelefono" />

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/nombre"
        android:textColor="@color/primary_text"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/entradaEmail"
        app:layout_constraintTop_toBottomOf="@+id/entradaEmail" />

    <EditText
        android:id="@+id/entradaNombre"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/primary_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textColor="@color/primary_text"
        android:textCursorDrawable="@null"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/viewNombre"
        app:layout_constraintTop_toBottomOf="@+id/viewNombre" />

    <TextView
        android:id="@+id/viewApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/apellidos"
        android:textSize="18dp"
        android:textColor="@color/primary_text"
        app:layout_constraintStart_toStartOf="@+id/entradaNombre"
        app:layout_constraintTop_toBottomOf="@+id/entradaNombre" />

    <EditText
        android:id="@+id/entradaApellidos"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/primary_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textColor="@color/primary_text"
        android:textCursorDrawable="@null"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/viewApellidos"
        app:layout_constraintTop_toBottomOf="@+id/viewApellidos" />

    <TextView
        android:id="@+id/viewTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/telefono"
        android:textSize="18dp"
        android:textColor="@color/primary_text"
        app:layout_constraintStart_toStartOf="@+id/entradaApellidos"
        app:layout_constraintTop_toBottomOf="@+id/entradaApellidos" />

    <EditText
        android:id="@+id/entradaTelefono"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/primary_text"
        android:ems="10"
        android:inputType="phone"
        android:maxLength="9"
        android:textColor="@color/primary_text"
        android:textCursorDrawable="@null"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/viewTelefono"
        app:layout_constraintTop_toBottomOf="@+id/viewTelefono" />

    <TextView
        android:id="@+id/viewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/mail"
        android:textColor="@color/primary_text"
        android:textCursorDrawable="@null"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/entradaPassw"
        app:layout_constraintTop_toBottomOf="@+id/entradaPassw" />

    <EditText
        android:id="@+id/entradaEmail"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/primary_text"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:textColor="@color/primary_text"
        android:textCursorDrawable="@null"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/viewEmail"
        app:layout_constraintTop_toBottomOf="@+id/viewEmail"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:gravity="center"
        android:text="*"
        android:textSize="18dp"
        android:textCursorDrawable="@null"
        android:textColor="@color/primary_text"
        app:layout_constraintStart_toEndOf="@+id/viewUsuario"
        app:layout_constraintTop_toTopOf="@+id/viewUsuario" />
</androidx.constraintlayout.widget.ConstraintLayout>